--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ itertools = "0.10.5"
 log = "0.4.17"
 qapi = { version = "0.10.0", features = ["qmp", "qga"] }
 rand = "0.8.5"
+scopeguard = "1.1.0"
 serde = "1.0.147"
 serde_derive = "1.0.147"
 toml = "0.5.9"
