--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,11 +10,29 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-test:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Build
       run: cargo build --verbose
+
+    - name: Install test deps
+      run: |
+        sudo apt-get update
+        # Virtualization deps
+        sudo apt-get install -y qemu-system-x86-64 ovmf
+        # Test deps
+        sudo apt-get install -y mkosi dnf
+
+    - name: Generate test images
+      run: make images
+
+    - name: Run integration tests
+      run: make test
+
+    - name: Run rustfmt
+      run: cargo fmt --check
