--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ scopeguard = "1.1.0"
 serde = "1.0.147"
 serde_derive = "1.0.147"
 shell-words = "1.1.0"
+tempfile = "3.3.0"
 toml = "0.5.9"
 
 [dev-dependencies]
