--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "vmtest"
 authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
 description = "Helps run your tests in virtual machines"
+repository = "https://github.com/danobi/vmtest"
+readme = "README.md"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
