--- a/scripts/docker/Dockerfile.kernel
+++ b/scripts/docker/Dockerfile.kernel
@@ -31,7 +31,7 @@ WORKDIR linux
 
 COPY ./scripts/docker/config_kernel.sh config_kernel.sh
 COPY ./scripts/docker/build_kernel_container.sh build_kernel_container.sh
-COPY ./tests/distros distros
+COPY ./tests/kernels kernels
 RUN ./config_kernel.sh ${DISTRO}
 
 ENTRYPOINT ["./build_kernel_container.sh"]
