--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,18 +22,13 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build
-      run: cargo build --verbose
+      run: make
 
     - name: Install test deps
       run: |
         sudo apt-get update
         # Virtualization deps
         sudo apt-get install -y qemu-system-x86-64 ovmf
-        # Test deps
-        sudo apt-get install -y mkosi dnf
-
-    - name: Generate test images
-      run: make images
 
     - name: Run integration tests
       run: make test
