--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,13 @@
-# This job listens for new releases and will build + upload a statically
-# linked vmtest binary to the new release's assets.
+# This job listens for newly pushed tags. For each found tag, it will will
+# do a static build, create a release, and upload said binary to the new
+# release's assets.
 
 name: Release
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "v*.*.*"
 
 permissions:
   contents: write
@@ -27,11 +29,13 @@ jobs:
         components: rustfmt, clippy
 
     - name: Build statically linked vmtest
-      run: RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-unknown-linux-gnu
-
-    - name: Upload binary
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-unknown-linux-gnu
         cp ./target/x86_64-unknown-linux-gnu/release/vmtest ./vmtest-amd64
-        gh release upload ${{ github.ref_name }} ./vmtest-amd64
+
+    - name: Create release
+      uses: softprops/action-gh-release@v1
+      with:
+        name: Release ${{ github.ref_name }}
+        generate_release_notes: true
+        files: ./vmtest-amd64
