--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 version = "0.7.0"
 edition = "2021"
 license = "Apache-2.0"
+rust-version = "1.70.0"
 
 [dependencies]
 anyhow = "1.0.66"
 clap = { version = "4.0.26", features = ["derive"] }
 console = "0.15.5"
-env_logger = "0.9.3"
+env_logger = "0.10.0"
 itertools = "0.10.5"
 lazy_static = "1.4.0"
 log = "0.4.17"
