--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = "1.70.0"
 
 [dependencies]
 anyhow = "1.0.66"
-clap = { version = "4.0.26", features = ["derive"] }
+clap = { version = "4.0.26", features = ["derive", "string"] }
 console = "0.15.5"
 env_logger = "0.10.0"
 itertools = "0.10.5"
