--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,10 +47,12 @@ jobs:
     - name: Enable KVM group perms
       run: |
         # Only configure kvm perms if kvm is available
-        [[ -f /dev/kvm ]] || exit 0
-        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-        sudo udevadm control --reload-rules
-        sudo udevadm trigger --name-match=kvm
+        if [[ -e /dev/kvm ]]; then
+          echo "Updating KVM permissions"
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+        fi
 
     - name: Run integration tests
       run: make test
