--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ scopeguard = "1.1.0"
 serde = "1.0.147"
 serde_derive = "1.0.147"
 tempfile = "3.5.0"
+tinytemplate = "1.2.1"
 toml = "0.5.9"
 
 [dev-dependencies]
