qemu: Send guest command output to virtio-serial port
This teaches the command entrypoint to locate the virtio-serial port and
stream all output (with stdout and stderr merged) to the chardev. This
gives us streaming command output which is a much nicer UX for the user.

But b/c we support virtual machine images (as well as plain kernel), we
make the virtio-serial port optional. B/c we don't require folks build
VM image kernels with CONFIG_VIRTIO_CONSOLE.

--- a/src/init/command.template
+++ b/src/init/command.template
@@ -6,5 +6,26 @@
 cd { host_shared }
 {{ endif }}
 
+# Discover where the output chardev is located
+vport=
+for dir in /sys/class/virtio-ports/*; do
+    if [[ "$(cat "$dir/name")" == "{ command_output_port_name }" ]]; then
+        vport_name=$(basename "$dir")
+        vport="/dev/$vport_name"
+    fi
+done
+
+# Send the rest of the script to the output chardev
+if [[ -n "$vport" ]]; then
+    exec > "$vport"
+    exec 2>&1
+else
+    # Make a missing serial port a soft error. We don't necessarily need
+    # streamed command output -- it's completely a UX thing. It's more
+    # likely this fails on images.
+    echo >&2 "vmtest: Failed to locate command output virtio-serial port."
+    echo >&2 "vmtest: Falling back to qemu-guest-agent output capture."
+fi
+
 # Run user supplied command
 { command }
