test: test interactive shell functionality
Add a test that will boot vmtest with a kernel in interactive shell mode.
We need to sleep a bit in order to have vmtest mount shared folder with QGA.

Signed-off-by: Manu Bretelle <chantr4@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,6 @@ tinytemplate = "1.2.1"
 toml = "0.5.9"
 
 [dev-dependencies]
-test-log = "0.2.11"
+rexpect = "0.5"
 rstest = "0.18.2"
+test-log = "0.2.11"
