--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ clap = { version = "4.0.26", features = ["derive", "string"] }
 console = "0.15.5"
 env_logger = "0.10.0"
 itertools = "0.10.5"
+libc = "0.2.158"
 log = "0.4.17"
 qapi = { version = "0.14.0", features = ["qmp", "qga"] }
 rand = "0.8.5"
@@ -25,6 +26,13 @@ serde_derive = "1.0.147"
 tempfile = "3.5.0"
 tinytemplate = "1.2.1"
 toml = "0.5.9"
+vhost = "0.11.0"
+vhost-user-backend = "0.15.0"
+virtio-bindings = "0.2.1"
+virtio-queue = "0.12.0"
+virtiofsd = "1.11.1"
+vm-memory = { version = "0.14.1", features = ["backend-mmap", "backend-atomic"] }
+vmm-sys-util = "0.12.1"
 
 [dev-dependencies]
 rexpect = "0.5"
