ci: Trigger kernel job for kconfig changes
Before, it was only being triggered for kernel version changes. Now,
it'll be triggered for config changes as well. You'll probably need to
delete assets from the dummy release that you want updated as well.

--- a/.github/workflows/kernels.yml
+++ b/.github/workflows/kernels.yml
@@ -11,6 +11,7 @@ on:
     branches: [ "master" ]
     paths:
       - 'tests/KERNELS'
+      - 'tests/kernels/**'
 
 concurrency:
   # Ensure only a single instance of this job is run at any time
