XXX: try with alpine
getting failures:

```
  = note: ld.lld: error: /usr/lib/libc.a(aio.lo) is incompatible with /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/self-contained/crt1.o
          ld.lld: error: /usr/lib/libc.a(aio_suspend.lo) is incompatible with /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/self-contained/crt1.o
          ld.lld: error: /usr/lib/libc.a(lio_listio.lo) is incompatible with /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/self-contained/crt1.o
          ld.lld: error: /usr/lib/libc.a(__cexp.lo) is incompatible with /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/self-contained/crt1.o
          ld.lld: error: /usr/lib/libc.a(__cexpf.lo) is incompatible with /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/self-contained/crt1.o
```

--- a/scripts/docker/Dockerfile.release
+++ b/scripts/docker/Dockerfile.release
@@ -1,16 +1,8 @@
-FROM ubuntu:24.04
+FROM rust:alpine
 
-ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y \
-  build-essential \
-  rustup \
-  libcap-ng-dev \
-  libseccomp-dev
+RUN apk add --no-cache bash clang lld
 
 WORKDIR /build
-
-# Initialize rustup
-RUN rustup default stable
 
 # Only copy in things needed to build
 COPY ./Cargo.toml .
@@ -18,4 +10,4 @@ COPY ./Cargo.lock .
 COPY ./src ./src
 COPY ./scripts ./scripts
 
-ENTRYPOINT ["./scripts/docker/build_release_container.sh"]
+ENTRYPOINT ["/build/scripts/docker/build_release_container.sh"]
