XXX: try zig, why not?
getting this failure:
```
error: unable to find dynamic system library 'seccomp' using strategy 'no_fallback'. searched paths:
            /build/target/aarch64-unknown-linux-musl/release/deps/libseccomp.so
            /build/target/release/deps/libseccomp.so
            /usr/bin/libseccomp.so
            /usr/lib//libseccomp.so
            /usr/lib//libseccomp.so
            /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/libseccomp.so
            /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/libseccomp.so
            /usr/local/rustup/toolchains/1.81.0-x86_64-unknown-linux-musl/lib/rustlib/aarch64-unknown-linux-musl/lib/self-contained/libseccomp.so

error: could not compile `vmtest` (bin "vmtest") due to 1 previous error
```

--- a/scripts/docker/Dockerfile.release
+++ b/scripts/docker/Dockerfile.release
@@ -1,6 +1,7 @@
 FROM rust:alpine
 
-RUN apk add --no-cache bash clang lld
+RUN apk add --no-cache bash clang lld zig
+RUN cargo install --locked cargo-zigbuild
 
 WORKDIR /build
 
